@@ -14,6 +14,9 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Added 'mapnik_version_from_string()' function in python bindings to easily convert string representation
+  of version number to the integer format used in 'mapnik/version.hpp'. e.g. '0.7.1' --> 701.
+
 - Added xinclude (http://www.w3.org/TR/xinclude/) support to libxml2-based xml parser (oldtopos) (#567)
 
 - Optimized rendering speeds by avoiding locking in the projection code (r2063)
